# prgen

./: 0Temp.c  install.sh  main.c  meson.build  pathcmp.c  prfile.c  prfile.h  prgen.pro  project.c  project.h  wparser.c  wparser.h  wrparser.c  wrparser.h
